# Scheme-Haskell

./: CHANGELOG.md  Makefile  README.md  Scheme-Haskell.cabal  lisp.sh  test.sh
app/: Main.hs
src/Scheme/: Evaluator.hs  LispError.hs  State.hs
src/Scheme/Parser/: LispVal.hs  ParseAtom.hs  ParseExpr.hs  ParseNumber.hs  ParseString.hs
src/Scheme/Primitives/: Binops.hs  List.hs
tests/: TestMain.hs
