cabal-version:      3.8
name:               Scheme
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Rupanshu Yadav
maintainer:         58172798+zyrch@users.noreply.github.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

library
    hs-source-dirs: src
    build-depends:    
      base >=4.14.3.0, 
      parsec, 
      megaparsec,
      mtl
    exposed-modules:
      Scheme.Parser.ParseAtom
      Scheme.Parser.ParseString
      Scheme.Parser.ParseNumber
      Scheme.Parser.ParseExpr
      Scheme.Parser.LispVal
      Scheme.Evaluator
      Scheme.LispError
      Scheme.Primitives.Binops
      Scheme.Primitives.List
      Scheme.State

    default-language: Haskell2010


executable scheme
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >=4.14.3.0, parsec, megaparsec, Scheme, mtl
    hs-source-dirs:   app
    default-language: Haskell2010

Test-Suite test-scheme
    type:             exitcode-stdio-1.0
    hs-source-dirs:   tests
    main-is:          TestMain.hs
    default-language: Haskell2010
    build-depends:    base
                    , tasty
                    , tasty-hunit
                    , tasty-smallcheck
                    , HUnit
                    , Scheme
                    , parsec
                    , megaparsec
                    , Scheme
    
